--- a/tutorials/polyglot/index.html
+++ b/tutorials/polyglot/index.html
@@ -46,7 +46,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org833c24d">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
+<li><a href="#orge0c95c8">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
 </ul>
 </div>
 </nav>
@@ -67,9 +67,9 @@
 </script>
 
 
-<section id="outline-container-org833c24d" class="outline-2">
-<h2 id="org833c24d">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
-<div class="outline-text-2" id="text-org833c24d">
+<section id="outline-container-orge0c95c8" class="outline-2">
+<h2 id="orge0c95c8">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
+<div class="outline-text-2" id="text-orge0c95c8">
 <p>
 <a href="https://github.com/shrisharaob/polyglot">GitHub Repo</a><br>
 </p>
