--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -46,19 +46,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org9f616c9">Introduction</a></li>
-<li><a href="#org169a742">Understanding Stable Diffusion</a></li>
-<li><a href="#org9156159">How Stable Diffusion Works</a></li>
-<li><a href="#org477cf00">Applications of Stable Diffusion</a></li>
-<li><a href="#orgeaf0e4d">Conclusion</a></li>
-<li><a href="#orgc3fff2a">Code</a></li>
+<li><a href="#org7243620">Introduction</a></li>
+<li><a href="#orga8a35c4">Understanding Stable Diffusion</a></li>
+<li><a href="#orga71b8ca">How Stable Diffusion Works</a></li>
+<li><a href="#org376c828">Applications of Stable Diffusion</a></li>
+<li><a href="#org3870812">Conclusion</a></li>
+<li><a href="#org74dcb00">Code</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-org9f616c9" class="outline-2">
-<h2 id="org9f616c9">Introduction</h2>
-<div class="outline-text-2" id="text-org9f616c9">
+<section id="outline-container-org7243620" class="outline-2">
+<h2 id="org7243620">Introduction</h2>
+<div class="outline-text-2" id="text-org7243620">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -69,9 +69,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-org169a742" class="outline-2">
-<h2 id="org169a742">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org169a742">
+<section id="outline-container-orga8a35c4" class="outline-2">
+<h2 id="orga8a35c4">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orga8a35c4">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -89,9 +89,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-org9156159" class="outline-2">
-<h2 id="org9156159">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-org9156159">
+<section id="outline-container-orga71b8ca" class="outline-2">
+<h2 id="orga71b8ca">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-orga71b8ca">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -120,9 +120,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-org477cf00" class="outline-2">
-<h2 id="org477cf00">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org477cf00">
+<section id="outline-container-org376c828" class="outline-2">
+<h2 id="org376c828">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org376c828">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -142,9 +142,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-orgeaf0e4d" class="outline-2">
-<h2 id="orgeaf0e4d">Conclusion</h2>
-<div class="outline-text-2" id="text-orgeaf0e4d">
+<section id="outline-container-org3870812" class="outline-2">
+<h2 id="org3870812">Conclusion</h2>
+<div class="outline-text-2" id="text-org3870812">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -167,9 +167,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-orgc3fff2a" class="outline-2">
-<h2 id="orgc3fff2a">Code</h2>
-<div class="outline-text-2" id="text-orgc3fff2a">
+<section id="outline-container-org74dcb00" class="outline-2">
+<h2 id="org74dcb00">Code</h2>
+<div class="outline-text-2" id="text-org74dcb00">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
